archive/parser/tests/snapshots/statements/valid/lseg@8.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "-- vertical\nINSERT INTO LSEG_TBL VALUES ('[(0,-20),(30,-20)]');"
---
Parse {
    cst: SourceFile@0..63
      SqlComment@0..11 "-- vertical"
      Newline@11..12 "\n"
      InsertStmt@12..63
        Insert@12..18 "INSERT"
        Whitespace@18..19 " "
        Into@19..23 "INTO"
        Whitespace@23..24 " "
        RangeVar@24..32
          Ident@24..32 "LSEG_TBL"
        Whitespace@32..33 " "
        SelectStmt@33..61
          Values@33..39 "VALUES"
          Whitespace@39..40 " "
          Ascii40@40..41 "("
          List@41..61
            AConst@41..61
              Sconst@41..61 "'[(0,-20),(30,-20)]'"
        Ascii41@61..62 ")"
        Ascii59@62..63 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: InsertStmt(
                InsertStmt {
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "lseg_tbl",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 12,
                        },
                    ),
                    cols: [],
                    select_stmt: Some(
                        Node {
                            node: Some(
                                SelectStmt(
                                    SelectStmt {
                                        distinct_clause: [],
                                        into_clause: None,
                                        target_list: [],
                                        from_clause: [],
                                        where_clause: None,
                                        group_clause: [],
                                        group_distinct: false,
                                        having_clause: None,
                                        window_clause: [],
                                        values_lists: [
                                            Node {
                                                node: Some(
                                                    List(
                                                        List {
                                                            items: [
                                                                Node {
                                                                    node: Some(
                                                                        AConst(
                                                                            AConst {
                                                                                isnull: false,
                                                                                location: 29,
                                                                                val: Some(
                                                                                    Sval(
                                                                                        String {
                                                                                            sval: "[(0,-20),(30,-20)]",
                                                                                        },
                                                                                    ),
                                                                                ),
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                ),
                                            },
                                        ],
                                        sort_clause: [],
                                        limit_offset: None,
                                        limit_count: None,
                                        limit_option: Default,
                                        locking_clause: [],
                                        with_clause: None,
                                        op: SetopNone,
                                        all: false,
                                        larg: None,
                                        rarg: None,
                                    },
                                ),
                            ),
                        },
                    ),
                    on_conflict_clause: None,
                    returning_list: [],
                    with_clause: None,
                    r#override: OverridingNotSet,
                },
            ),
            range: 11..62,
        },
    ],
}
